--- a/www/employeedetails.html
+++ b/www/employeedetails.html
@@ -5,31 +5,41 @@
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <link rel="stylesheet" href="css/styles.css" />
     </head>
-
+    
     <body>
         
 	<div id="header" class="header">
+		<a href="index.html" class="nav">Home</a>
 		<h1>Employee Directory</h1>
-		
 	</div>
 	<div id="header2">
-		<h2>Employee List</h2>
+		<h2>Employee Details</h2>
 	</div>
 	
 	<div id="wrapper">
-		<ul id="employeeList" class="icon-list"></ul>
+	  	<div>
+	  		<div id="employeeDetails">
+ 		  		<img id="employeePic"/>
+	       		<h3 id="fullName"></h3>
+	       		<p id="employeeTitle"></p>
+	       		<p id="city"></p>
+	  		</div> 
+	    	<ul id="actionList"></ul>
+	  	</div>
+		<br/>
+		<input class="Scan" type="button" value="Scan"></input>
 	</div>
 
 	<div id="busy"/>Loading...</div>
 
 	<!-- <script src="js/cordova-2.5.0.js"></script> -->
-	
+  
 	<script type="text/javascript" src="phonegap.js"></script>
-	<!--<script src="barcodescanner.js"></script>-->
-	
+	<script src="barcodescanner.js"></script>
+	  
 	<script src="js/jquery.js"></script>
     <script src="js/iscroll.js"></script>
-    <script src="js/employeelist.js"></script>
+    <script src="js/employeedetails.js"></script>
 
     </body>
 
