--- a/www/employeedetails.html
+++ b/www/employeedetails.html
@@ -27,12 +27,10 @@
 	    	<ul id="actionList"></ul>
 	  	</div>
 		<br/>
-		<input class="Scan" type="button" value="Scan"></input>
+		<input class="scan" type="button" value="Scan"></input>
 	</div>
 
 	<div id="busy"/>Loading...</div>
-
-	<!-- <script src="js/cordova-2.5.0.js"></script> -->
   
 	<script type="text/javascript" src="phonegap.js"></script>
 	<script src="barcodescanner.js"></script>
